Update contact.ejs to use pageData fields (info, details), wired to Admin_Contact_Page schema

--- a/views/admin_contact_edit.ejs
+++ b/views/admin_contact_edit.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title><%= title || 'Edit Contact - Admin' %></title>
 
-  <!-- Favicon (capital I in Images) -->
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="/Images/logo.png" />
   <link rel="shortcut icon" type="image/png" href="/Images/logo.png" />
 
