--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -74,6 +74,7 @@
           <li><a class="dropdown-item load-page" data-url="/about" data-edit="/admin/edit/about" href="#">About</a></li>
           <li><a class="dropdown-item load-page" data-url="/contact" data-edit="/admin/edit/contact" href="#">Contact Us</a></li>
           <li><a class="dropdown-item load-page" data-url="/admin/analytics" data-edit="" href="#">Analytics</a></li>
+          <li><a class="dropdown-item load-page" data-url="/admin/review_emails" data-edit="" href="#">Check Emails</a></li>
           <li><hr class="dropdown-divider"></li>
           <li>
             <form action="/admin/logout" method="POST" style="margin:0;">
